# android_retinaface_facergg_maskclass

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/aiface_as/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mask.param  mbfacev2.param
app/src/main/cpp/: detect.cpp  detect.h  face_jni.cpp  facemask.cpp  facemask.h  recognize.cpp  recognize.h  retinaface.cpp  retinaface.h
app/src/main/java/com/aiface_as/: Face.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/aiface_as/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
